fix fallback for fullname in project reference